--- a/WebDemo/web/WEB-INF/web.xml
+++ b/WebDemo/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>tientt.filter.AuthenticationFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>StoreSessionFilter</filter-name>
+        <filter-class>tientt.filter.StoreSessionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>StoreSessionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/*</url-pattern>
@@ -68,10 +76,6 @@
         <servlet-name>AuthRegisterServlet</servlet-name>
         <servlet-class>tientt.servlet.AuthRegisterServlet</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>CartViewCheckoutServlet</servlet-name>
-        <servlet-class>tientt.servlet.CartViewCheckoutServlet</servlet-class>
-    </servlet>
     <servlet-mapping>
         <servlet-name>AuthLoginServlet</servlet-name>
         <url-pattern>/AuthLoginServlet</url-pattern>
@@ -119,10 +123,6 @@
     <servlet-mapping>
         <servlet-name>AuthRegisterServlet</servlet-name>
         <url-pattern>/AuthRegisterServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CartViewCheckoutServlet</servlet-name>
-        <url-pattern>/CartViewCheckoutServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
