--- a/WebDemo/web/WEB-INF/web.xml
+++ b/WebDemo/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>tientt.filter.AuthenticationFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>CheckoutFilter</filter-name>
+        <filter-class>tientt.filter.CheckoutFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CheckoutFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/*</url-pattern>
